corpus/comments.txt
================================================================================
standalone_comment
================================================================================
<!-- This is a comment! -->
--------------------------------------------------------------------------------

(document
  (comment))

================================================================================
Comments
================================================================================
<?xml version='1.0' encoding='utf8' standalone="no"?>
<!-- This is a comment! -->
--------------------------------------------------------------------------------

(document
  (prolog
    (xml_decl
      (version_info
        (attribute_value))
      (encoding_decl
        (attribute_value))
      (standalone_decl
        (attribute_value))))
    (comment))